# private_fed_refactored

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt  run_single.sh  run_single_gep.sh  run_single_sgd_dp.sh  sweep_epsilons.sh
app/: federated_learning.py  federated_learning_sweep.py
notebooks/: data_split_analysis.ipynb
private_federated/aggregation_strategies/: average_clip_strategy.py  average_strategy.py  utils.py
private_federated/common/: builder.py  config.py  utils.py
private_federated/data/: dataset_factory.py  loaders_generator.py  random_data_split.py  utils.py
private_federated/differential_privacy/: utils.py
private_federated/differential_privacy/accountant/: event.py
private_federated/differential_privacy/accountant/noise_compute_strategy/: rdp_accountant_strategy.py
private_federated/differential_privacy/dp_sgd/: dp_sgd_aggregation_starategy.py
private_federated/differential_privacy/gep/: gep.py  gep_no_residual_aggregation_strategy.py  gep_server.py  utils.py
private_federated/federated_learning/: client.py  clients_factory.py  gp_client.py  gp_client_factory.py  server.py  utils.py
private_federated/models/: model_factory.py  resnet_cifar.py  utils.py
private_federated/models/pFedGP/: Learner.py  node.py  pFedGP_compute.py  pFedGP_full_data.py  tree.py  utils.py
private_federated/train/: utils.py
