[tool.poetry]
name = "private-federated"
version = "0.1.1"
description = "Implementation of differentially private federated learning"
authors = ["Moshe Beutel <moshebeutel@gmail.com>"]
readme = "README.md"
packages = [{include = "private_federated"}]

[tool.poetry.dependencies]
python = "^3.10"
tqdm = "^4.66.1"
wandb = "^0.15.9"
dp-accounting = "^0.4.3"
poethepoet = "^0.24.1"
typing-extensions = "^4.8.0"
pillow = "^10.1.0"
scikit-learn = "^1.4.1.post1"


[tool.poe.tasks]
force-cuda118 = "python -m pip install torch torchvision --index-url https://download.pytorch.org/whl/cu118"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
