[tool.poetry]
name = "private-federated"
version = "0.2.9"
description = "Implementation of differentially private federated learning"
authors = ["Moshe Beutel <moshebeutel@gmail.com>"]
readme = "README.md"
packages = [{include = "private_federated"}]

[tool.poetry.dependencies]
python = "^3.10"
tqdm = "^4.66.1"
wandb = "^0.15.9"
dp-accounting = "^0.4.3"
typing-extensions = "^4.8.0"
pillow = "^10.1.0"
scikit-learn = "^1.4.1.post1"
torch = "^2.2.1"
torchvision = "^0.17.1"
gpytorch = "^1.11"
cython = "^3.0.9"
scipy = "^1.12.0"
gitpython = "^3.1.42"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
